[package]
name = "RestApi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = "3.3.2"
serde = { version = "1.0.129", features = ["derive"] } 
serde_json = "1.0.66" 
uuid = {version = "0.6.5", features = ["v4", "serde"]}
diesel = {version = "1.4.7", features = ["uuid", "r2d2", "postgres"]}
